--- a/templates/widgets/home/components/V2.html
+++ b/templates/widgets/home/components/V2.html
@@ -37,7 +37,7 @@
         </tr>
         <tr>
           <td colspan="1" id="v2_q_ventilador_min" class="text-center">0.25</td>
-          <td colspan="1" class="text-center">Q Ventilador</td>
+          <td colspan="1" class="text-center"></td>
           <td colspan="1" id="v2_q_frente" class="text-center"></td>
         </tr>
         <tr>
@@ -50,13 +50,13 @@
         </tr>
         <tr>
           <td colspan="1" id="" class="text-center">V max</td>
-          <td colspan="1" class="text-center">Maximo</td>
+          <td colspan="1" class="text-center"></td>
           <td colspan="1" id="" class="text-center"></td>
         </tr>
         <tr>
           
           <td colspan="1" id="v2_q_frente" class="text-center">2.5</td>
-          <td colspan="1" lass="text-center">Q Frente</td>
+          <td colspan="1" lass="text-center"></td>
           <td colspan="1" id="v2_q_frente" class="text-center"></td>
           
         </tr>
@@ -100,7 +100,15 @@
       </thead>
       <tbody>
         <tr>
-          <td id="v2_semaforo" class="text-center"></td>
+          <td id="" class="text-center bg-red"  style="background-color: #07f873; color: black;">
+            0.25 m/s < Velocidad del aire < 2.5 m/s
+          </td>
+          
+        </tr>
+        <tr>
+          <td id="" class="text-center bg-green" style="background-color: #dc3545; color: white;">
+            Velocidad del aire fuera de rango
+          </td>
         </tr>
       </tbody>
     </table>
