--- a/templates/widgets/home/components/V3.html
+++ b/templates/widgets/home/components/V3.html
@@ -1,7 +1,7 @@
 <div class="row align-items-center my-4">
 
   <!-- Estado y Fórmula -->
-  <div class="col-md-6">
+  <div class="col-md-4">
     <table class="table table-bordered">
       <thead>
         <tr class="bg-secondary text-white text-center">
@@ -18,8 +18,10 @@
           <td class="text-center" id='v3_estado' style="background-color: {% if tgbh.estado == 1 %}#d4edda{% else %}#f8d7da{% endif %};">
             {{ tgbh.estado }}
           </td>
-          <td rowspan="3" class="text-center align-middle font-italic fw-bold" style="font-size: 1.2rem;">
-            TGBH = 0.7 * t° bulbo húmedo + 0.3 * t° bulbo seco
+          <td rowspan="4"  class="text-center align-middle font-italic fw-bold" style="font-size: 1.2rem;">
+            TGBH = <br />
+            0.7 * t° bulbo húmedo + <br />
+            0.3 * t° bulbo seco
 
           </td>
         </tr>
@@ -33,20 +35,18 @@
         </tr>
         <tr>
           <td>TGBH frente</td>
-          <td colspan="2"  class="text-center" id="v3_tgbh">{{ tgbh.tgbh_frente }}</td>
+          <td colspan="1"  class="text-center" id="v3_tgbh">{{ tgbh.tgbh_frente }}</td>
         </tr>
       </tbody>
     </table>
   </div>
 
   <!-- Niveles de Carga de Trabajo -->
-  <div class="col-md-3">
+  <div class="col-md-4">
     <table class="table table-bordered">
       <thead class="thead-light bg-secondary text-white text-center">
         <tr>
-          <th colspan="4">Nivel de carga de trabajo</th>
-        </tr>
-        <tr>
+          <th>Nivel de carga de trabajo</th>
           <th>Trabajo continuo</th>
           <th>75% trabajo - 25% descanso</th>
           <th>50% trabajo - 50% descanso</th>
@@ -55,18 +55,21 @@
       </thead>
       <tbody>
         <tr>
+          <td class="text-center">Liviana</td>
           <td class="text-center">30</td>
           <td class="text-center">30.6</td>
           <td class="text-center">31.4</td>
           <td class="text-center">32.2</td>
         </tr>
         <tr>
+          <td class="text-center">Moderada</td>
           <td class="text-center">26.7</td>
           <td class="text-center">28</td>
           <td class="text-center">29.4</td>
           <td class="text-center">31.1</td>
         </tr>
         <tr>
+          <td class="text-center">Pesada</td>
           <td class="text-center">25</td>
           <td class="text-center">25.9</td>
           <td class="text-center">27.9</td>
@@ -97,14 +100,22 @@
           <td>T° b. seco</td>
           <td class="text-center" id="v3_tbs">{{ tgbh.temp_bulbo_seco }}</td>
         </tr>
+        
         <tr>
-          <td>Semáforo</td>
-          <td class="text-center" style="background-color: {% if tgbh.tgbh >= tgbh.min and tgbh.tgbh <= tgbh.max %}#28a745{% else %}#dc3545{% endif %}; color: white;">
-            {% if tgbh.tgbh >= tgbh.min and tgbh.tgbh <= tgbh.max %}
-              TGBH dentro del Rango de T°
-            {% else %}
-              TGBH fuera del Rango de T°
-            {% endif %}
+          <td>Nivel de carga</td>
+          <td class="text-center" id="v3_nivel_carga">{{ tgbh.temp_bulbo_seco }}</td>
+        </tr>
+
+        <tr>
+          <td rowspan="2">Semáforo</td>
+          <td class="text-center" style="background-color: green; color:white;">
+            TGBH dentro del Rango de T°
+            
+          </td>
+        </tr>
+        <tr>
+          <td class="text-center" style="background-color: red; color: white;">
+            TGBH fuera del Rango de T°
           </td>
         </tr>
       </tbody>
