se agregaron las tarjetas con colores

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
   
   
   {# All main content resides within a container #}
-  <main role="main" class="container {% block body_container_classes %}{% endblock %}">
+  <main role="main" class="container ">
     {% block navbar_section %}
     {% endblock %}
     
